# libRSF

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  Build.bash  CMakeLists.txt  InstallDependecies.bash  InstallDependencies.bash  README.md
.github/workflows/: Bionic Build.yml  Bionic CI.yml  Bionic Tests.yml  Bionic-CI.yml  Focal Build.yml  Focal CI.yml  Focal Tests.yml  Focal-CI.yml  Jammy.yml  buildAndRunExamples2004.yml
applications/: AppPool_Adaptive.cpp  AppPool_Adaptive.h  AppPool_Defines.cpp  AppPool_Defines.h  AppPool_Init.cpp  AppPool_Init.h  AppPool_Sensors.cpp  AppPool_Sensors.h  AppPool_Utility.cpp  AppPool_Utility.h  App_GNSS.cpp  App_GNSS.h  App_PointSetRegistration.cpp  App_PointSetRegistration.h  App_PointSetRegistration_Simple.cpp  App_Ranging_2D.cpp  App_Ranging_2D.h  App_Robust_Models_1D.cpp  App_Robust_Models_1D.h  App_Robust_Models_2D.cpp  App_Robust_Models_2D.h  App_Robust_Models_3D.cpp  App_Robust_Models_3D.h  App_SLAM.cpp  App_SLAM.h  App_SLAM_BR_2D.cpp  App_SLAM_BR_2D.h  App_SLAM_RO_2D.cpp  App_SLAM_RO_2D.h  App_SLAM_Range_Loop_2D.cpp  App_SLAM_Range_Loop_2D.h  App_multiFusion.cpp  CMakeLists.txt  ICRA19_GNSS.cpp  ICRA19_GNSS.h  ICRA19_Ranging.cpp  ICRA19_Ranging.h  IV19_GNSS.cpp  IV19_GNSS.h
cmake/: DownloadGoogleTest.cmake.in  Findortools.cmake  InstallGoogleTest.cmake.in  libRSFConfig.cmake.in  libRSFUninstall.cmake.in
config/: Default_GNSS.yaml  Default_Ranging.yaml  Default_SLAM_2D.yaml
datasets/Chemnitz City/: Chemnitz_GT.txt  readme.txt
datasets/Indoor UWB/: Data_Indoor_UWB.txt  Indoor_UWB_GT.txt  Indoor_UWB_Input.txt  readme.txt
datasets/Indoor_UWB/: Indoor_UWB_Input.txt  readme.txt
datasets/Ranging_Simulation/: M3500_GT.txt  M3500_heavy-tailed_Input.txt  M3500_multimodal_Input.txt  M3500_skewed_Input.txt  W3500_GT.txt  W3500_heavy-tailed_Input.txt  W3500_multimodal_Input.txt  W3500_skewed_Input.txt  readme.txt
datasets/SLAM/: Corridor_GT.txt  Corridor_Input.txt  Lecture_Hall_GT.txt  Lecture_Hall_Input.txt  readme.txt
datasets/UrbanNav/: readme.txt
datasets/smartLoc/: Berlin_Gendarmenmarkt_GT.txt  Berlin_Potsdamer_Platz_GT.txt  Berlin_Potsdamer_Platz_Input.txt  Data_Berlin_Potsdamer_Platz_Web.txt  Frankfurt_Main_Tower_GT.txt  (+2 more)
datasets/smartLoc-RTKLIB/: Berlin_Gendarmenmarkt_RTK_GT.txt  Berlin_Potsdamer_Platz_RTK_GT.txt  Berlin_Potsdamer_Platz_RTK_Input.txt  Frankfurt_Main_Tower_RTK_GT.txt  Frankfurt_Westend_Tower_RTK_GT.txt  readme.txt
docs/: CUSTOM.md  CUSTOM_CONFIG.md  CUSTOM_ERROR_MODELS.md  CUSTOM_FACTORS.md  CUSTOM_IN_OUT.md  GNSS.md  ROBUST.md
examples/: CMakeLists.txt  Example_Adaptive_2D.cpp  Example_Adaptive_2D.h  Example_AutoDiff.cpp  Example_FG_Generic.cpp  Example_FG_Generic.h  Example_FG_Pseudorange.cpp  Example_FG_Pseudorange.h  Example_FG_Range.cpp  Example_FG_Range.h  Example_GMM_Estimation.h  Example_GMM_Estimation_1D.cpp  Example_GMM_Estimation_2D.cpp  Example_IMU.cpp  Example_IMU_Single.cpp  Example_KF.cpp  Example_Marginalization.cpp  Example_Marginalization.h  Example_Odometry.cpp  Example_Robust_Models_1D.cpp  Example_Robust_Models_2D.cpp  Example_Rotations.cpp
include/: AngleLocalParamatrization.h  AngleLocalParametrization.h  CalculateCovariance.h  Constants.h  Data.h  DataConfig.h  DataGeneric.h  DataSet.h  DataStream.h  FactorGraph.h  FactorGraphConfig.h  FactorGraphSampling.h  FactorGraphStructure.h  FactorIDSet.h  FileAccess.h  GNSS.h  Geometry.h  Hash.h  ListInTime.h  LocalParametrization.h  Marginalization.h  Messages.h  Misc.h  NormalizeAngle.h  NumericalRobust.h  QuaternionCalc.h  Resampling.h  SensorData.h  SensorDataSet.h  StateData.h  StateDataSet.h  Statistics.h  Tensor.h  TestUtils.h  TimeMeasurement.h  Types.h  VectorMath.h  VectorTypes.h  libRSF.h  misc.h
matlab/: startup.m
src/: AngleLocalParametrization.cpp  CMakeLists.txt  CMakeLists.txt~  CalculateCovariance.cpp  Constants.cpp  Data.cpp  DataConfig.cpp  DataGeneric.cpp  DataSet.cpp  DataStream.cpp  FactorGraph.cpp  FactorGraphConfig.cpp  FactorGraphSampling.cpp  FactorGraphStructure.cpp  FactorIDSet.cpp  FileAccess.cpp  GNSS.cpp  Geometry.cpp  Hash.cpp  ListInTime.cpp  LocalParametrization.cpp  Marginalization.cpp  Messages.cpp  Misc.cpp  NormalizeAngle.cpp  NumericalRobust.cpp  QuaternionCalc.cpp  Resampling.cpp  SensorData.cpp  SensorDataSet.cpp  StateData.cpp  StateDataSet.cpp  Statistics.cpp  Tensor.cpp  TestUtils.cpp  TimeMeasurement.cpp  Types.cpp  VectorMath.cpp  VectorTypes.cpp  misc.cpp
src/error_models/: CMakeLists.txt  DynamicCovarianceEstimation.cpp  ErrorModel.cpp  Gaussian.cpp  GaussianComponent.cpp  GaussianMixture.cpp  LossFunction.cpp  MaxMixture.cpp  MaxSumMixture.cpp  NumericalRobust.cpp  SumMixture.cpp  SwitchableConstraints.cpp
src/factors/: BaseFactor.cpp  BearingRangeFactor.cpp  BetweenPose2Factor.cpp  BetweenPose3Factor.cpp  BetweenQuaternionFactor.cpp  BetweenValueFactor.cpp  CMakeLists.txt  ConstantDriftFactor.cpp  ConstantPose2Factor.cpp  ConstantQuaternionFactor.cpp  ConstantValueFactor.cpp  IMUFactor.cpp  IMUPreintegrationFactor.cpp  MarginalPrior.cpp  MeasurementFactor.cpp  OdometryFactor2D.cpp  OdometryFactor2DDifferential.cpp  OdometryFactor3D.cpp  PointRegistrationFactor.cpp  PressureDifferenceFactor.cpp  PriorFactor.cpp  PseudorangeFactor.cpp  RangeFactor.cpp  RangeToPointFactor.cpp  TrackingDetectionFactor.cpp  TrackingFactor.cpp
src/geometric_models/: CMakeLists.txt  IMUModel.cpp  IMUPreintegrator.cpp  OdometryIntegrator.cpp  OdometryModel.cpp  RelativePoseModel.cpp
src/predictors/: CMakeLists.txt  PredictConstantDrift.cpp  PredictConstantValue.cpp  PredictOdometry.cpp  PredictOdometry2.cpp  PredictOdometry2DDifferential.cpp  PredictOdometry2Diff.cpp
test/: CMakeLists.txt  TestUtils.cpp  TestUtils.h  Test_App_GNSS.cpp  Test_App_Ranging_2D.cpp  Test_App_Robust_Models_1D.cpp  Test_App_Robust_Models_2D.cpp  Test_App_SLAM.cpp  Test_Example_FG_Generic.cpp  Test_Example_FG_Pseudorange.cpp  Test_Example_FG_Range.cpp  Test_Example_Marginalization.cpp  Test_Examples.cpp  Test_GMM_Estimation_1D.cpp  Test_GMM_Estimation_2D.cpp  Test_ICRA19_GNSS.cpp  Test_IV19_GNSS.cpp
(+69 files in other folders)
